# Self-Organized-Locomotion

./: README.md  list_changes.md
src/stick_insect_sim_pkg/: CMakeLists.txt
src/stick_insect_sim_pkg/src/: adaptiveSF.cpp  adaptiveSF.h  adaptive_controller.cpp  adaptive_controller.h  controller.cpp  duallearner.cpp  duallearner.h  medaextra-fixed_CPG.ttt  medaextra_cpg_traj.lua  medaextra_ver2.ttt  rbfn.cpp  rbfn.h  rbfn_semicircle.cpp  rbfn_semicircle.h  so2CPG.cpp  so2CPG.h  stick_insect_script_ver2.lua
src/stick_insect_sim_pkg/src/rbfn_files/: .~lock.cpg-data.csv#  cpg-data.csv  rbfn_centers_5.txt  rbfn_joint_targets_0.csv  rbfn_joint_targets_1.csv  rbfn_joint_targets_1_v1.csv  rbfn_joint_targets_1_v2.csv  rbfn_joint_targets_1_v3.csv  rbfn_joint_targets_2.csv  rbfn_joint_targets_2_new_v1.csv  rbfn_joint_targets_2_v1.csv  rbfn_joint_targets_2_v3.csv  rbfn_joint_targets_2_v4.csv  rbfn_joint_targets_withz_ma21_0.csv  rbfn_joint_targets_withz_ma21_1-old.csv  rbfn_joint_targets_withz_ma21_2.csv  rbfn_joint_targets_withz_me_0.csv  rbfn_joint_targets_withz_me_1.csv  rbfn_joint_targets_withz_me_1_bad.csv  rbfn_joint_targets_withz_me_2.csv  rbfn_joint_targets_withz_me_2_old.csv  rbfn_joint_targets_withz_si_0.csv  rbfn_joint_targets_withz_si_1.csv  rbfn_joint_targets_withz_si_1_old.csv  rbfn_joint_targets_withz_si_2.csv  rbfn_sse_0.txt  rbfn_sse_1.txt  rbfn_sse_2.txt  rbfn_sse_3.txt  rbfn_sse_4.txt  rbfn_sse_5.txt  rbfn_target_scaled_0.txt  rbfn_target_scaled_1.txt  rbfn_target_scaled_2.txt  rbfn_weights_0.txt  rbfn_weights_2.txt  rbfn_weights_3.txt  rbfn_weights_4.txt
(+1856 files in other folders)
